# rust-ldn-demo

./: .gitignore  Cargo.toml  README.md  Spatial.toml  evil_wizards.sh  good_wizards.sh  rust_client.json  rust_worker.json  spatialos.json  world.json
schema/demo/: fire.schema  hq.schema  lumberjack.schema  tree.schema  wizard.schema
snapshots/: default.snapshot
src/client/: main.rs
src/client/behaviors/: mod.rs  trees.rs  wizards.rs
src/gamelogic/: main.rs
src/gamelogic/behaviors/: count_trees.rs  hq.rs  lumberjacks.rs  mod.rs  trees.rs
src/generate-snapshot/: main.rs
src/shared/: behavior.rs  connection.rs  fps.rs  mod.rs  opt.rs  templates.rs  utils.rs
