[package]
name = "rust-ldn-demo"
version = "0.1.0"
authors = ["Jamie Brynes <jamiebrynes7@gmail.com>"]
edition = "2018"

[[bin]]
name = "gamelogic"
path = "src/gamelogic/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "generate-snapshot"
path = "src/generate-snapshot/main.rs"

[dependencies]
spatialos-sdk = { path = "../spatialos-sdk-rs/spatialos-sdk" }
log = "0.4.6"
structopt = "0.2.15"
rand = "0.6.5"
futures = "0.1.25"
